@@ -1,12 +1,7 @@
-Options -p and -u added for timestamping,
-new environment variables SOCKLINGER_NOW and SOCKLINGER_PID,
-now installs into /usr/local/bin
+Script sockets implemented, Option -f.
 
-SOCKLINGER_PID is when you need to kill the outer loop for some
-reason, like security issues.  Try following at your own risk:
-<pre>#!/bin/bash
-[ -n "$SOCKLINGER_PID" ] || exec env -i /usr/local/bin/socklinger -pn -5 :12345 "$0"
-</pre>
+Both are somewhat experimental.
 
-Also source update to latest library changes
-
+If the socket starts with a pipe character (|) it now is a program to execute.
+This allows two scripts to talk to each other, like in
+<pre>socklinger -v "|bash -c 'while read a; do echo \"\$a\" >&2; done'" bash -c 'echo hello world'</pre>
