@@ -1,3 +1,10 @@
+2010-01-25  Valentin Hilbig  <tino@firebird.03.softkill.net>
+
+	* socklinger.c (process_args): usage corrected
+	(process_args): Option -f
+	(socklinger_dosock): connect() uses tino_proc_sock() to support
+	'|script' sockets
+
 2009-07-17  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* socklinger.c (process_args, socklinger): PID moved from
